fix: fix mobile view scrollbar bug

--- a/src/pages/15_数字动画/style.css
+++ b/src/pages/15_数字动画/style.css
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
 }
 
 #app .price-wrapper {
